--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,13 @@ p{
   .hidden {
     display: none;
   }
+
+@media only screen and (max-width: 400px) {
+    .container{
+        height: 90vh;
+        width: 80vw;
+        margin: 5vh auto 0;
+        padding: 0.5em;
+        border-radius: 2em;
+    }
+}
