--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@ body{
     background-color: hsl(216, 12%, 8%);
     margin: 0;
     box-sizing: border-box;
+    font-family:'Overpass', sans-serif;
 }
 h1{
     color:  hsl(0, 0%, 100%);
     padding-left: 1em;
+    font-weight :700;
 }
 p{
     color: hsl(217, 12%, 63%);
@@ -31,7 +33,7 @@ p{
     margin-left: 1.5em;
     border-radius: 50%;
 }
-.container ul {
+.container btn-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,7 +41,7 @@ p{
     margin-right: 2rem;
     list-style-type: none;
   }
-  .container ul li button {
+  .container button {
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
@@ -48,11 +50,12 @@ p{
     padding-top: 0.2rem;
     color: hsl(0, 0%, 100%);
     transition: 0.3s;
+    cursor:pointer
   }
-  .container ul li button:hover {
+  .container button:hover {
     background-color: hsl(25, 97%, 53%);
   }
-  .container ul li button:focus {
+  .container button:focus {
     background-color: hsl(216, 12%, 54%);
   }
   
